[package]
name = "moq-logger"
version = "0.1.0"
edition = "2024"

[dependencies]
async-once-cell = "0.5.4"
chrono = { version = "0.4.40", features = ["serde"] }
lazy_static = "1.5.0"
paho-mqtt = "0.13.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
